--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 	</head>
 
-		<body>
-		
+	<body>
+
 
 		<header class="header text-center">
 			<div class="force-overflow">
@@ -148,7 +148,7 @@
 
 			<section class="overview-section p-3 p-lg-5">
 				<div class="container">
-					<h2 class="section-title font-weight-bold mb-3">What I do</h2>
+					<h2 class="section-title font-weight-bold mb-3">My Skills</h2>
 					<div class="section-intro mb-5">I have more than 2 years' experience building software for clients all over
 						the world. Below is a quick overview of my main technical skill sets and technologies I use. Want to find
 						out more about my experience? Check out my <a href="resume.html">online resume</a> and <a
@@ -158,9 +158,10 @@
 							<div class="item-inner">
 								<div class="item-icon"><i class="fab fa-js-square"></i></div>
 								<h3 class="item-title">Vanilla JavaScript</h3>
-								<div class="item-desc">List skills/technologies here. You can change the icon above to any of the 1500+
-									<a class="theme-link" href="https://fontawesome.com/" target="_blank">FontAwesome 5 free icons</a>
-									available. Aenean commodo ligula eget dolor.</div>
+								<div class="progress" style="height: 1px;">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+										aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+								</div>
 							</div>
 							<!--//item-inner-->
 						</div>
@@ -170,9 +171,10 @@
 								<div class="item-icon"><i class="fab fa-angular mr-2"></i><i class="fab fa-react mr-2"></i><i
 										class="fab fa-vuejs"></i></div>
 								<h3 class="item-title">Angular, React &amp; Vue</h3>
-								<div class="item-desc">List skills/technologies here. You can change the icon above to any of the 1500+
-									<a class="theme-link" href="https://fontawesome.com/" target="_blank">FontAwesome 5 free icons</a>
-									available. Aenean commodo ligula eget dolor. </div>
+								<div class="progress" style="height: 1px;">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+										aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+								</div>
 							</div>
 							<!--//item-inner-->
 						</div>
@@ -182,9 +184,10 @@
 							<div class="item-inner">
 								<div class="item-icon"><i class="fab fa-node-js"></i></div>
 								<h3 class="item-title">Node.js</h3>
-								<div class="item-desc">List skills/technologies here. You can change the icon above to any of the 1500+
-									<a class="theme-link" href="https://fontawesome.com/" target="_blank">FontAwesome 5 free icons</a>
-									available. Aenean commodo ligula eget dolor. </div>
+								<div class="progress" style="height: 1px;">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+										aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+								</div>
 							</div>
 							<!--//item-inner-->
 						</div>
@@ -194,9 +197,10 @@
 							<div class="item-inner">
 								<div class="item-icon"><i class="fab fa-python"></i></div>
 								<h3 class="item-title">Python &amp; Django</h3>
-								<div class="item-desc">List skills/technologies here. You can change the icon above to any of the 1500+
-									<a class="theme-link" href="https://fontawesome.com/" target="_blank">FontAwesome 5 free icons</a>
-									available. Aenean commodo ligula eget dolor. </div>
+								<div class="progress" style="height: 1px;">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+										aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+								</div>
 							</div>
 							<!--//item-inner-->
 						</div>
@@ -205,9 +209,10 @@
 							<div class="item-inner">
 								<div class="item-icon"><i class="fab fa-php"></i></div>
 								<h3 class="item-title">PHP</h3>
-								<div class="item-desc">List skills/technologies here. You can change the icon above to any of the 1500+
-									<a class="theme-link" href="https://fontawesome.com/" target="_blank">FontAwesome 5 free icons</a>
-									available. Aenean commodo ligula eget dolor. </div>
+								<div class="progress" style="height: 1px;">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+										aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+								</div>
 							</div>
 							<!--//item-inner-->
 						</div>
@@ -217,9 +222,10 @@
 								<div class="item-icon"><i class="fab fa-npm mr-2"></i><i class="fab fa-gulp mr-2"></i><i
 										class="fab fa-grunt"></i></div>
 								<h3 class="item-title">npm, Gulp &amp; Webpack</h3>
-								<div class="item-desc">List skills/technologies here. You can change the icon above to any of the 1500+
-									<a class="theme-link" href="https://fontawesome.com/" target="_blank">FontAwesome 5 free icons</a>
-									available. Aenean commodo ligula eget dolor. </div>
+								<div class="progress" style="height: 1px;">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+										aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+								</div>
 							</div>
 							<!--//item-inner-->
 						</div>
@@ -228,9 +234,10 @@
 							<div class="item-inner">
 								<div class="item-icon"><i class="fab fa-html5 mr-2"></i><i class="fab fa-css3-alt"></i></div>
 								<h3 class="item-title">HTML &amp; CSS</h3>
-								<div class="item-desc">List skills/technologies here. You can change the icon above to any of the 1500+
-									<a class="theme-link" href="https://fontawesome.com/" target="_blank">FontAwesome 5 free icons</a>
-									available. Aenean commodo ligula eget dolor. </div>
+								<div class="progress" style="height: 1px;">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+										aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+								</div>
 							</div>
 							<!--//item-inner-->
 						</div>
@@ -239,9 +246,10 @@
 							<div class="item-inner">
 								<div class="item-icon"><i class="fab fa-sass mr-2"></i><i class="fab fa-less"></i></div>
 								<h3 class="item-title">Sass &amp; LESS</h3>
-								<div class="item-desc">List skills/technologies here. You can change the icon above to any of the 1500+
-									<a class="theme-link" href="https://fontawesome.com/" target="_blank">FontAwesome 5 free icons</a>
-									available. Aenean commodo ligula eget dolor. </div>
+								<div class="progress" style="height: 1px;">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+										aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+								</div>
 							</div>
 							<!--//item-inner-->
 						</div>
@@ -252,6 +260,85 @@
 								class="fas fa-arrow-alt-circle-right mr-2"></i>Services &amp; Pricing
 
 						</a></div>
+
+				</div>
+				<!--//container-->
+			</section>
+
+			<section class="overview-section p-3 p-lg-5">
+				<div class="container">
+					<h2 class="section-title font-weight-bold mb-3">What I do</h2>
+					<div class="section-intro mb-5">I have more than 2 years' experience building software for clients all over
+						the world. Below is a quick overview of my main technical skill sets and technologies I use. Want to find
+						out more about my experience? Check out my <a href="resume.html">online resume</a> and <a
+							href="portfolio.html">project portfolio</a>.</div>
+					<div class="row">
+						<div class="item col-6 col-lg-3">
+							<div class="item-inner text-center">
+								<div class="item-icon"><i class="fas fa-code"></i></div>
+								<h3 class="item-title">Angular, React &amp; Vue Development</h3>
+								<div class="item-desc">I will work with Angular, VueJs and ReactJS tp create an impressive, attractive,
+									informative, and functional dynamic SPA site that exceeds your expectations and meets your business
+									goals.
+								</div>
+							</div>
+							<!--//item-inner-->
+						</div>
+						<!--//item-->
+						<div class="item col-6 col-lg-3">
+							<div class="item-inner text-center">
+								<div class="item-icon"><i class="far fa-square"></i></div>
+								<h3 class="item-title">Frontend Web Development</h3>
+								<div class="item-desc">L
+									Choose offshore Frontend web development services and get skilled professionals, state-of-art
+									infrastructure, and latest technologies. I assure i will ensure that the job gets done with
+									the highest level of professionalism and at market leading prices.
+								</div>
+							</div>
+							<!--//item-inner-->
+						</div>
+						<!--//item-->
+
+						<div class="item col-6 col-lg-3">
+							<div class="item-inner text-center">
+								<div class="item-icon"><i class="fab fa-php"></i> </div>
+								<h3 class="item-title">PHP Backend Development</h3>
+								<div class="item-desc">
+									I will help you to build Core PHP, laravel and Codiegntaor application with MysQL database at the
+									backend. I will also create CMS for your website. I'm specializes in creating outstanding custom
+									websites and e-commerce websites. </div>
+							</div>
+							<!--//item-inner-->
+						</div>
+						<!--//item-->
+
+						<div class="item col-6 col-lg-3">
+							<div class="item-inner text-center">
+								<div class="item-icon"><i class="fas fa-database"></i></div>
+								<h3 class="item-title">Database Development</h3>
+								<div class="item-desc">
+									I will helps you in providing database application in MySQL, Msqlite, SQL Server and MongodB.
+									Our best Web Development service that brings you more leads and sales.
+								</div>
+							</div>
+							<!--//item-inner-->
+						</div>
+						<!--//item-->
+						<!-- <div class="item col-6 col-lg-3">
+							<div class="item-inner text-center">
+								<div class="item-icon"><i class="fas fa-database"></i></div>
+								<h3 class="item-title">Database Development</h3>
+								<div class="item-desc">
+									I will helps you in providing responsive and pixel perfect PSD to Bootstrap and
+									email conversion services.
+								</div>
+							</div>
+						</div> -->
+						<!--//item-->
+					</div>
+					<!--//row-->
+					<div class="text-center py-3"><a href="services.html" class="btn btn-primary">
+							<i class="fas fa-arrow-alt-circle-right mr-2"></i>Services &amp; Pricing</a></div>
 
 				</div>
 				<!--//container-->
@@ -595,9 +682,13 @@
 							<div class="card blog-post-card">
 								<img class="card-img-top" src="https://i.stack.imgur.com/Z6YUF.jpg" alt="image">
 								<div class="card-body">
-									<h5 class="card-title"><a class="theme-link" target="_blank" href="https://topmosthings.com/top-reason-to-use-react-in-2020/">Top Reasons to Use React in 2020</a></h5>
-									<p class="card-text">Last few years React totally overtook all the other front-end competition in popularity, mostly thanks to the extreme focus on user experience and development simplicity..</p>
-									<p class="mb-0"><a class="more-link" target="_blank" href="https://topmosthings.com/top-reason-to-use-react-in-2020/">Read more &rarr;</a></p>
+									<h5 class="card-title"><a class="theme-link" target="_blank"
+											href="https://topmosthings.com/top-reason-to-use-react-in-2020/">Top Reasons to Use React in
+											2020</a></h5>
+									<p class="card-text">Last few years React totally overtook all the other front-end competition in
+										popularity, mostly thanks to the extreme focus on user experience and development simplicity..</p>
+									<p class="mb-0"><a class="more-link" target="_blank"
+											href="https://topmosthings.com/top-reason-to-use-react-in-2020/">Read more &rarr;</a></p>
 								</div>
 								<div class="card-footer">
 									<small class="text-muted">Published a week ago</small>
@@ -611,10 +702,14 @@
 							<div class="card blog-post-card">
 								<img class="card-img-top" src="https://i.stack.imgur.com/bk67f.png" alt="image">
 								<div class="card-body">
-									<h5 class="card-title"><a class="theme-link" target="_blank"href="https://topmosthings.com/new-javascript-ui-libraries-frameworks-for-2020/">New JavaScript UI libraries & frameworks for 2020</a></h5>
+									<h5 class="card-title"><a class="theme-link" target="_blank"
+											href="https://topmosthings.com/new-javascript-ui-libraries-frameworks-for-2020/">New JavaScript UI
+											libraries & frameworks for 2020</a></h5>
 									<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
 										eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient...</p>
-									<p class="mb-0"><a class="more-link" target="_blank"href="https://topmosthings.com/new-javascript-ui-libraries-frameworks-for-2020/">Read more &rarr;</a></p>
+									<p class="mb-0"><a class="more-link" target="_blank"
+											href="https://topmosthings.com/new-javascript-ui-libraries-frameworks-for-2020/">Read more
+											&rarr;</a></p>
 								</div>
 								<div class="card-footer">
 									<small class="text-muted">Published 3 weeks ago</small>
