--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@
 								<div class="item-desc">
 									I will help you to build Core PHP, laravel and Codiegntaor application with MysQL database at the
 									backend. I will also create CMS for your website. I'm specializes in creating outstanding custom
-									websites and e-commerce websites. </div>
+									websites and e-commerce websites.
+								</div>
 							</div>
 							<!--//item-inner-->
 						</div>
