--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 						<div class="media-body">
 							<h2 class="name font-weight-bold mb-1">Muhammad Ayoub</h2>
-							<div class="tagline mb-3">Javascript Engineer</div>
+							<div class="tagline mb-3">Hobbyist. Programmer. Dreamer. JavaScript and TypeScript lover.</div>
 							<div class="bio mb-4">
 								Hi, Em <strong>Muhammad Ayoub</strong> self-learned <i>programmer</i> from <strong>Faisalabad</strong>.
 								I'm a
