--- a/index.html
+++ b/index.html
@@ -743,7 +743,9 @@
 		<script src="./assets/plugins/jquery-3.4.1.min.js"></script>
 		<script src="./assets/plugins/bootstrap/bootstrap.bundle.min.js"></script>
 		<script src="./assets/plugins/owlcarousel/owl.carousel.min.js"></script>
-		<script src="./assets/js/testimonials.js"></script> <!-- Dark Mode -->
+		<script src="./assets/js/testimonials.js"></script>
+		
+		<!-- Dark Mode -->
 		<script src="./assets/plugins/js-cookie.min.js"></script>
 		<script src="./assets/js/dark-mode.js"></script>
 
